--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,10 @@ Description: A tool for biologists to convert legacy microscopy video formats
     and microscope software with approximately 2x better compression at the same
     visual quality, and converting legacy AVI (MJPEG) and H.265 recordings to a
     single patent-free format suited for long-term archival. Automatically selects
-    the best available backend: GPU hardware acceleration via VAAPI (AMD/Intel) or
-    Vulkan (VK_KHR_VIDEO_ENCODE_AV1, when driver support is available), with
-    automatic fallback to CPU encoding through FFmpeg and SVT-AV1. Provides a
+    the best available backend: GPU hardware acceleration via Vulkan
+    VK_KHR_VIDEO_ENCODE_AV1 (bundled headers included, no SDK >= 1.3.290
+    required at build time), with automatic fallback to CPU encoding through
+    FFmpeg and SVT-AV1. Provides a
     simple R API for batch conversion of entire experiment folders. Designed for
     reproducible workflows: encoding parameters can be recorded alongside
     experiment metadata.
